# evidentlyai_server

./: .gitignore  GUIA_USO.md  Makefile  README.md  docker-compose.yaml  env.example  pyproject.toml  remote_demo_project.py  setup_project.py
examples/: data_generator.py  evidently_client.py
