[project]
name = "evidentlyai-server"
version = "0.1.0"
description = "Servidor EvidentlyAI para monitoramento e avaliação de modelos ML/LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evidently>=0.7.9",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "requests>=2.28.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    "faker>=19.0.0",
    "schedule>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 88
target-version = "py39"
